--- a/src/app/store/store.component.html
+++ b/src/app/store/store.component.html
@@ -5,8 +5,11 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-3 bg-info p-2 text-white">
-            {{ categories.length}}
+        <div class="col-3 p-2">
+           <button class="btn btn-block btn-outline-primary" (click)="changeCategory()">Home</button>
+           <button class="btn btn-block btn-outline-primary" *ngFor="let category of categories" 
+                   [class.active]="category == selectedCategory"
+                   (click)="changeCategory(category)">{{category}}</button>
         </div>
         <div class="col-9 p-2">
             <div *ngFor="let product of products" class="card m-1 p-1 bg-light">
